[gd_scene load_steps=3 format=3 uid="uid://bgi0auwgwo6nr"]

[ext_resource type="Script" path="res://player/ui/Interface.gd" id="1_5l112"]
[ext_resource type="Texture2D" uid="uid://ddmi0ete0wr0a" path="res://player/ui/interface.png" id="2_7ja87"]

[node name="Interface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5l112")

[node name="Interface" type="Sprite2D" parent="."]
position = Vector2(594, 326)
scale = Vector2(0.640625, 0.640625)
texture = ExtResource("2_7ja87")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 256.0
offset_bottom = 543.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "New Play"
alignment = 0

[node name="Saves" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"
alignment = 0

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"
alignment = 0

[node name="Guid" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Guid"
alignment = 0

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"
alignment = 0

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Saves" to="." method="_on_saves_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Guid" to="." method="_on_guid_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
